--- a/01_exploración.ipynb
+++ b/01_exploración.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhadQi7p/iJC90q+YYglAQ",
+      "authorship_tag": "ABX9TyM/B9n4SV3fI1k5QsSN5fxV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,9 @@
       "source": [
         "<p align=\"center\"><img alt=\"udeA logo\" height=\"150px\" src=\"https://github.com/freddyduitama/images/blob/master/logo.png?raw=true\"></p><h1><font color='0B5345'> <center>\n",
         "\n",
-        "Probabilidad y estadística\n",
+        "</center></font></h1>\n",
+        "<center>\n",
+        "INTRODUCCION A LA INTELIGENIA ARTIFICIAL\n",
         "\n",
         " </center></font></h1>\n",
         "<h2><font color='0B5345'> <center>\n",
@@ -47,12 +49,41 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **ANÁLSIS EXPLORATORIO DE DATOS**"
+      ],
+      "metadata": {
+        "id": "EGEJehphTGRd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "HmuZYT6bR-aC"
+        "id": "z-GIZ4T5UXzc"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from scipy.stats import f_oneway\n",
+        "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
+        "import numpy as np\n",
+        "from tabulate import tabulate\n",
+        "from scipy import stats\n",
+        "from statsmodels.formula.api import ols\n",
+        "import statsmodels.api as sm\n"
+      ],
+      "metadata": {
+        "id": "HmuZYT6bR-aC"
+      },
+      "execution_count": 1,
       "outputs": []
     }
   ]
