--- a/02_Preprocesado.ipynb
+++ b/02_Preprocesado.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1poc3lQ5iXaqlNXuxk4xEWGn-p2TOja7o",
-      "authorship_tag": "ABX9TyNXBm9JrSLWXvi835OMpRF/",
+      "authorship_tag": "ABX9TyMKdSFnVOV6QiYAVQ++euyS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2070,6 +2069,83 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# --------- CARGA DE DATOS ----------\n",
+        "df_test = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Introduccion IA/test.csv', sep=',')\n",
+        "\n",
+        "# creamos un conjunto de entrenamiento ficticio\n",
+        "# con la misma estructura que test.csv + columna objetivo \"RENDIMIENTO_GLOBAL\"\n",
+        "df_train = df_test.copy()\n",
+        "np.random.seed(42)\n",
+        "df_train['RENDIMIENTO_GLOBAL'] = np.random.choice(['bajo', 'medio-bajo', 'medio-alto', 'alto'], size=len(df_train))\n",
+        "\n",
+        "# --------- PREPROCESAMIENTO ----------\n",
+        "# Separamos características y etiqueta\n",
+        "X = df_train.drop(columns=['ID', 'RENDIMIENTO_GLOBAL'])\n",
+        "y = df_train['RENDIMIENTO_GLOBAL']\n",
+        "\n",
+        "# Para predecir luego\n",
+        "X_test = df_test.drop(columns=['ID'])\n",
+        "\n",
+        "# Columnas categóricas y numéricas\n",
+        "cat_cols = X.select_dtypes(include='object').columns.tolist()\n",
+        "num_cols = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+        "\n",
+        "# Preprocesadores\n",
+        "cat_transformer = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+        "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+        "])\n",
+        "\n",
+        "num_transformer = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='mean')),\n",
+        "    ('scaler', StandardScaler())\n",
+        "])\n",
+        "\n",
+        "# Combinar todo\n",
+        "preprocessor = ColumnTransformer(transformers=[\n",
+        "    ('num', num_transformer, num_cols),\n",
+        "    ('cat', cat_transformer, cat_cols)\n",
+        "])\n",
+        "\n",
+        "# --------- MODELO ----------\n",
+        "clf = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('classifier', RandomForestClassifier(random_state=42))\n",
+        "])\n",
+        "\n",
+        "# Entrenamos\n",
+        "clf.fit(X, y)\n",
+        "\n",
+        "# --------- PREDICCIONES ----------\n",
+        "y_pred = clf.predict(X_test)\n",
+        "\n",
+        "# Crear archivo de predicción\n",
+        "df_resultado = pd.DataFrame({\n",
+        "    'ID': df_test['ID'],\n",
+        "    'RENDIMIENTO_GLOBAL': y_pred\n",
+        "})\n",
+        "\n",
+        "df_resultado.to_csv('predicciones.csv', index=False)\n",
+        "print(\"✅ Archivo 'predicciones.csv' generado con éxito.\")\n"
+      ],
+      "metadata": {
+        "id": "ZcYX8q52BStr"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
